--- a/Contact.html
+++ b/Contact.html
@@ -7,14 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../contact/style.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
     <title>Document</title>
 </head>
 
 <body>
     <!-- Carte localisation AFPA -->
     <div class="justify-content-center">
-        <img src="../contact/img/map.png" alt="location afpa" class="center">
+        <img src="assets/Images/map.png" alt="location afpa" class="center">
     </div>
     <!-- Espace contact -->
     <div class="contact mx-auto text-start row border row-cols-lg-2 row-cols-1">
