--- a/footer.html
+++ b/footer.html
@@ -16,7 +16,7 @@
         <section>  
             
             <div class="partenaires">
-                
+                <img src="assets/Images/afpa-logo.png" alt="">
             </div>
 
             <div id="containerFooter">
