--- a/contact/Contact.html
+++ b/contact/Contact.html
@@ -8,52 +8,47 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../contact/style.css">
+    <!-- favicon -->
+    <link rel="icon"
+        href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo"
+        type="image/gif" sizes="16x16">
+    <!-- EXTERNAL LINKS -->
+    <link rel="stylesheet" href="assets/css/header.css">
+    <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <!-- Carte localisation AFPA -->
-    <div class="justify-content-center">
-        <img src="../contact/img/map.png" alt="location afpa" class="center">
-    </div>
-    <!-- Espace contact -->
+    <header>
+        <section>
+            <!-- MAIN CONTAINER -->
+            <div id="container">
+                <!-- SHOP NAME -->
+                <div id="shopName"><a href="index.html"> <img src="../assets/Images/logo.png" alt="" srcset=""
+                            width="150px"></a></div>
+                <!-- COLLCETIONS ON WEBSITE -->
+                <div id="collection">
+                    <div id="clothing"><a href="clothing.html"> CLOTHING </a></div>
+                    <div id="accessories"><a href="contact.html"> CONTACT</a></div>
+                </div>
+                <!-- SEARCH SECTION -->
+                <div id="search">
+                    <i class="fas fa-search search"></i>
+                    <input type="text" id="input" name="searchBox" placeholder="Search for Clothing and Accessories">
+                </div>
+                <!-- USER SECTION (CART AND USER ICON) -->
+                <div id="user">
+                    <a href="cart.html"> <i class="fas fa-shopping-cart addedToCart">
+                            <div id="badge"> 0 </div>
+                        </i></a>
+                </div>
+            </div>
+        </section>
+    </header>
     <div class="contact mx-auto text-start row border row-cols-lg-2 row-cols-1">
-        <div id="adress" class="my-2 col-lg-4 mx-auto text-start">
-            <address>
-                <h3>Contact Us</h3>
-                <p>Contrary to popular belief, Lorem Ipsum is simply random text. It has roots in a piece of classical
-                    Latin literature from 45 BC, maki years old.</p>
-                    <div class="localisation rounded">
-                        <div class="icon float-start">
-                            <i class="bi bi-geo-alt"></i>
-                        </div>
-                        <div class="textContact">
-                            <span>Adresse</span>
-                            <p>135 Rue du Madrillet, 76800 Saint-Étienne-du-Rouvray</p>
-                        </div>
-                    </div>
-                    <div class="mail rounded">
-                    <div class="icon float-start">
-                        <i class="bi bi-envelope"></i>
-                    </div>
-                    <div class="textContact">
-                        <span>E-mail</span>
-                        <p>Shwim@gmail.com</p>
-                    </div>
-                </div>
-                <div class="telephone rounded">
-                    <div class="icon float-start">
-                        <i class="bi bi-phone"></i>
-                    </div>
-                    <div class="textContact">
-                        <span>Tel</span>
-                        <p>09 72 72 39 36</p>
-                    </div>
-                </div>
-            </address>
-        </div>
         <!-- Espace commentaire -->
-        <div id="commentary" class="my-2 col-lg-5 mx-auto">
+        <div id="commentary" class="col-lg-5 mx-auto">
             <h2>Leave A Comment</h2>
             <p>Our staff will call back later and answer your questions</p>
             <form class="Contact">
@@ -78,16 +73,51 @@
                 </button>
             </form>
         </div>
+        <!-- Espace contact -->
+        <div id="address" class="col-lg-4 mx-auto text-start">
+            <address>
+                <h3>Contact Us</h3>
+                <p>Contrary to popular belief, Lorem Ipsum is simply random text. It has roots in a piece of classical
+                    Latin literature from 45 BC, maki years old.</p>
+                <div class="localisation rounded">
+                    <div class="icon float-start">
+                        <i class="bi bi-geo-alt"></i>
+                    </div>
+                    <div class="textContact">
+                        <span>Adresse</span>
+                        <p>135 Rue du Madrillet, 76800 Saint-Étienne-du-Rouvray</p>
+                    </div>
+                </div>
+                <div class="mail rounded">
+                    <div class="icon float-start">
+                        <i class="bi bi-envelope"></i>
+                    </div>
+                    <div class="textContact">
+                        <span>E-mail</span>
+                        <p>Shwim@gmail.com</p>
+                    </div>
+                </div>
+                <div class="telephone rounded">
+                    <div class="icon float-start">
+                        <i class="bi bi-phone"></i>
+                    </div>
+                    <div class="textContact">
+                        <span>Tel</span>
+                        <p>09 72 72 39 36</p>
+                    </div>
+                </div>
+            </address>
+        </div>
     </div>
-
-
-
-
-
-
+    <!-- Carte localisation AFPA -->
+    <div class="justify-content-center">
+        <img src="../contact/img/map.png" alt="location afpa" class="center">
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="assets/js/header.js"></script>
 </body>
+
 
 </html>
