changement dans le header / footer

--- a/footer.html
+++ b/footer.html
@@ -33,9 +33,9 @@
 
                 <div id="webFooter">
                     <h3> Liens utiles </h3>
-                    <p> Accueil </p>
+                    <a href="index.html"><p> Accueil </p></a>
                     <p> A propos de nous </p>
-                    <p> Contact </p>
+                    <a href="contact.html"><p> Contact </p></a>
                 </div>
 
                 <div id="webFooter">
