--- a/header.html
+++ b/header.html
@@ -19,7 +19,7 @@
             <!-- MAIN CONTAINER -->
             <div id="container">
                 <!-- SHOP NAME -->
-                <div id="shopName"><a href="index.html"> <img src="assets/Images/logo.png" alt="" srcset="" width="150px"></a></div>
+                <div id="shopName"><a href="index.html"> <img src="assets/Images/logo.png" alt="" srcset="" ></a></div>
                     <!-- COLLCETIONS ON WEBSITE -->
                     <div id="collection">
                         <div id="clothing"><a href="clothing.html"> CLOTHING </a></div>
