--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
         href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo"
         type="image/gif" sizes="16x16">
     <!-- EXTERNAL LINKS -->
-    <link rel="stylesheet" href="../Shwim/assets/css/contact.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
     <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <title>Document</title>
@@ -24,7 +24,7 @@
             <!-- MAIN CONTAINER -->
             <div id="container">
                 <!-- SHOP NAME -->
-                <div id="shopName"><a href="index.html"> <img src="../Shwim/assets/Images/logo.png" alt="" srcset=""
+                <div id="shopName"><a href="index.html"> <img src="/assets/Images/logo.png" alt="" srcset=""
                             width="150px"></a></div>
                 <!-- COLLCETIONS ON WEBSITE -->
                 <div id="collection">
@@ -110,7 +110,7 @@
     </div>
     <!-- Carte localisation AFPA -->
     <div class="justify-content-center">
-        <img src="../Shwim/assets/Images/map.png" alt="location afpa" class="center">
+        <img src="assets/Images/map.png" alt="location afpa" class="center">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
