changement des liens ...

--- a/footer.html
+++ b/footer.html
@@ -62,7 +62,7 @@
                 </nav>
 
             </div>
-            <div id="credit"><a href="https://linkedin.com/in/priyanka-sharma-b79401142"> © Priyanka Sharma </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="https://www.edyoda.com/" target="_blank"> EDYODA </a></div>
+            <div id="credit"><a href=""> Amine </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp  <a href=""> Florian </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="" target="_blank"> Shamseddin </a></div>
         </section>
 
     </footer>
