--- a/Contact.html
+++ b/Contact.html
@@ -12,10 +12,12 @@
         href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo"
         type="image/gif" sizes="16x16">
     <!-- EXTERNAL LINKS -->
+    <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/contact.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 
 <body>
@@ -24,24 +26,21 @@
             <!-- MAIN CONTAINER -->
             <div id="container">
                 <!-- SHOP NAME -->
-                <div id="shopName"><a href="index.html"> <img src="/assets/Images/logo.png" alt="" srcset=""
-                            width="150px"></a></div>
-                <!-- COLLCETIONS ON WEBSITE -->
-                <div id="collection">
-                    <div id="clothing"><a href="clothing.html"> CLOTHING </a></div>
-                    <div id="accessories"><a href="contact.html"> CONTACT</a></div>
-                </div>
-                <!-- SEARCH SECTION -->
-                <div id="search">
-                    <i class="fas fa-search search"></i>
-                    <input type="text" id="input" name="searchBox" placeholder="Search for Clothing and Accessories">
-                </div>
-                <!-- USER SECTION (CART AND USER ICON) -->
-                <div id="user">
-                    <a href="cart.html"> <i class="fas fa-shopping-cart addedToCart">
-                            <div id="badge"> 0 </div>
-                        </i></a>
-                </div>
+                <div id="shopName"><a href="index.html"> <img src="assets/Images/logo.png" alt="" srcset="" ></a></div>
+                    <!-- COLLCETIONS ON WEBSITE -->
+                    <div id="collection">
+                        <div id="clothing"><a href="clothing.html"> CLOTHING </a></div>
+                        <div id="accessories"><a href="contact.html"> CONTACT</a></div>
+                    </div>
+                    <!-- SEARCH SECTION -->
+                    <div id="search">
+                        <i class="fas fa-search search"></i>
+                        <input type="text" id="input" name="searchBox" placeholder="Search for Clothing and Accessories">
+                    </div>
+                    <!-- USER SECTION (CART AND USER ICON) -->
+                    <div id="user">
+                        <a href="cart.html"> <i class="fas fa-shopping-cart addedToCart"><div id="badge"> 0 </div></i></a>
+                    </div>
             </div>
         </section>
     </header>
@@ -112,10 +111,66 @@
     <div class="justify-content-center">
         <img src="assets/Images/map.png" alt="location afpa" class="center">
     </div>
+    <footer>
+        <section>  
+            
+            <div class="partenaires">
+                <img  src="assets/Images/gucci-logo.png" alt="">
+                <img class="afpa-logo" src="assets/Images/afpa-logo.png" alt="">
+                <img src="assets/Images/h-m-logo-0.png" alt="">
+            </div>
+
+            <div id="containerFooter">
+                
+                <div id="webFooter">
+                    <h3 class="shwim-footer"> SHWIM </h3>
+                    <p> Vêtements Femmes </p>
+                    <p> Vêtements Femmes </p>
+                    <p> men accessories </p>
+                    <p> women accessories </p>
+                </div>
+
+                <div id="webFooter">
+                    <h3> Liens utiles </h3>
+                    <a href="index.html"><p> Accueil </p></a>
+                    <p> A propos de nous </p>
+                    <a href="contact.html"><p> Contact </p></a>
+                </div>
+
+                <div id="webFooter">
+                    <h3>    Partenaires </h3>
+                    <p> Gucci </p>
+                    <p> Afpa </p>
+                    <p> H&M </p>
+                    <p> + many more </p>
+                </div>
+
+                <div id="webFooter">
+                    <h3> Adresse </h3>
+                    <p> 135 rue du Madrillet </p>
+                    <p> 76800 </p>
+                    <p> Saint-Étienne-du-Rouvray </p>
+                    <p> France </p>
+                </div>
+
+                <nav class="reseaux">
+                    <i class="bi bi-instagram"></i>
+                    <i class="bi bi-twitter-x"></i>
+                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-pinterest"></i>
+                </nav>
+
+            </div>
+            <div id="credit"><a href=""> Amine </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp  <a href=""> Florian </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="" target="_blank"> Shamseddin </a></div>
+        </section>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="../Shwim/assets/js/header.js"></script>
+        <script src="assets/js/header.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+        <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
 </body>
 
 
