--- a/footer.html
+++ b/footer.html
@@ -62,7 +62,7 @@
                 </nav>
 
             </div>
-            <div id="credit"><a href=""> Amine </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp  <a href=""> Florian </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="" target="_blank"> Shamseddin </a></div>
+            <div id="credit"><a href=""> Amine </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp  <a href=""> Florian </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="" target="_blank"> Shamsddine </a></div>
         </section>
 
     </footer>
