--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <header>
         <section>
             <div id="container">
-                <div id="shopName"><a href="index.html"> <img src="assets/Images/logo.png" alt="" srcset=""></a></div>
+                <div id="shopName"> <a href="index.html"> <img src="assets/Images/logo.png" alt="" srcset=""> </a></div>
                 <div id="collection">
-                    <div id="clothing"><a href="clothing.html"> CLOTHING </a></div>
-                    <div id="accessories"><a href="contact.html"> CONTACT</a></div>
+                    <div id="clothing"> <a href="clothing.html"> CLOTHING </a> </div>
+                    <div id="accessories"> <a href="contact.html"> CONTACT</a> </div>
                 </div>
                 <div id="search">
                     <i class="fas fa-search search"></i>
@@ -46,6 +46,10 @@
                 <div id="slidingImage"> <img src="assets/Images/img4.png" alt="image4"> </div>
             </div>
         </section>
+
+
+
+
         <div class="promotion">
             <img src="assets/Images/french-days.jpg" alt="french-days-promo" srcset="">
         </div>
@@ -95,22 +99,22 @@
                         <div class="card mr-5 mt-5 border-0">
                             <img class="card-img-top" src="assets/Images/man-1.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title font-weight-bold">Pure Pineapple</h5>
+                                <h5 class="card-title font-weight-bold"> Pure Pineapple </h5>
                                 <p class="card-text">$32.00</p>
                             </div>
                         </div>
                         <div class="card mr-5 mt-5 border-0">
                             <img class="card-img-top" src="assets/Images/man-2.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title font-weight-bold">Guangzhou sweater</h5>
-                                <p class="card-text">$14.00<span>$34.00</span></p>
+                                <h5 class="card-title font-weight-bold"> Guangzhou sweater </h5>
+                                <p class="card-text"> $14.00 <span>$34.00</span></p>
                             </div>
                         </div>
                         <div class="card mt-5 mr-5 border-0">
                             <img class="card-img-top" src="assets/Images/man-1.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title font-weight-bold">zhou sweater</h5>
-                                <p class="card-text ">$34.00 </p>
+                                <h5 class="card-title font-weight-bold"> zhou sweater </h5>
+                                <p class="card-text "> $34.00 </p>
                             </div>
                         </div>
                     </div>
@@ -184,7 +188,7 @@
 
             </div>
             <div id="credit"><a href=""> Amine </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href=""> Florian </a>
-                &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="" target="_blank"> Shamseddin </a></div>
+                &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="" target="_blank"> Shamsddine </a></div>
         </section>
 
 
