--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/chrono.css">
+
     <title>Shwim</title>
 </head>
 
@@ -46,82 +48,124 @@
                 <div id="slidingImage"> <img src="assets/Images/img4.png" alt="image4"> </div>
             </div>
         </section>
-        <div class="promotion">
-            <img src="assets/Images/french-days.jpg" alt="french-days-promo" srcset="">
-        </div>
 
 
+        <section class="affiche">
+            <div class="container">
+                <div class="description">
+                    <h3 class="deal"> Deal du Week-end</h3>
+                    <p class="d">pour nos clients fidélisés profiter <br>d'une réduction de 15% avec le code DWWM</p>
+                    <!-- Display the countdown timer in an element -->
+                    <p id="demo"></p>
 
 
-
-            <div class="women-card row ">
-                <div class=" col-lg-3">
-                    <img src="assets/Images/women.jpg" alt="Snow" style="width: 100%; height: 100%;">
-                    <div class="centered">Women's</div>
                 </div>
-                <div class="card-group text-center col-lg-7 offset-lg-1 ">
-                    <div class="card mr-5 mt-5 border-0">
+
+            </div>
+
+        </section>
+
+
+
+
+
+
+        <div class="women-card row">
+            <div class="col-lg-3">
+                <img src="assets/Images/women.jpg" alt="Snow" style="width: 100%; height: 100%;">
+                <div class="centered">Women's</div>
+            </div>
+            <div class="card-group text-center col-lg-7 offset-lg-1">
+                <div class="card mr-5 mt-5 border-0">
+                    <div class="card-img-top-wrapper">
                         <img class="card-img-top" src="assets/Images/women-1.jpg.webp" alt="Card image cap">
+                        <div class="buy-button">Buy Now</div>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title font-weight-bold">Pure Pineapple</h5>
+                        <p class="card-text">$32.00</p>
+                    </div>
+                </div>
+                <div class="card mr-5 mt-5 border-0">
+                    <div class="card-img-top-wrapper">
+
+                        <img class="card-img-top" src="assets/Images/women-2.jpg.webp" alt="Card image cap">
+                        <div class="buy-button">Buy Now</div>
+                    </div>
+
+                    <div class="card-body">
+                        <h5 class="card-title font-weight-bold">Guangzhou sweater</h5>
+                        <p class="card-text">$14.00<span>$34.00</span></p>
+                    </div>
+                </div>
+                <div class="card mt-5 border-0">
+                    <div class="card-img-top-wrapper">
+
+                        <img class="card-img-top" src="assets/Images/women-3.jpg.webp" alt="Card image cap">
+                        <div class="buy-button">Buy Now</div>
+                    </div>
+
+                    <div class="card-body">
+                        <h5 class="card-title font-weight-bold">zhou sweater</h5>
+                        <p class="card-text ">$34.00 </p>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+            <div class="women-card row mt-5 ">
+                <div class="card-group text-center col-lg-8 offset-lg-1">
+                    <div class="card mr-5 mt-5 border-0">
+                        <div class="card-img-top-wrapper">
+
+                            <img class="card-img-top" src="assets/Images/man-1.jpg" alt="Card image cap">
+                            <div class="buy-button">Buy Now</div>
+                        </div>
+
                         <div class="card-body">
                             <h5 class="card-title font-weight-bold">Pure Pineapple</h5>
                             <p class="card-text">$32.00</p>
                         </div>
                     </div>
                     <div class="card mr-5 mt-5 border-0">
-                        <img class="card-img-top" src="assets/Images/women-2.jpg.webp" alt="Card image cap">
+                        <div class="card-img-top-wrapper">
+
+                            <img class="card-img-top" src="assets/Images/man-2.jpg" alt="Card image cap">
+                            <div class="buy-button">Buy Now</div>
+                        </div>
+
                         <div class="card-body">
                             <h5 class="card-title font-weight-bold">Guangzhou sweater</h5>
                             <p class="card-text">$14.00<span>$34.00</span></p>
                         </div>
                     </div>
-                    <div class="card mt-5 border-0">
-                        <img class="card-img-top" src="assets/Images/women-3.jpg.webp" alt="Card image cap">
+                    <div class="card mt-5 mr-5 border-0">
+                        <div class="card-img-top-wrapper">
+
+                            <img class="card-img-top" src="assets/Images/man-1.jpg" alt="Card image cap">
+                            <div class="buy-button">Buy Now</div>
+                        </div>
+
                         <div class="card-body">
                             <h5 class="card-title font-weight-bold">zhou sweater</h5>
                             <p class="card-text ">$34.00 </p>
                         </div>
                     </div>
                 </div>
-
-
-                <div class="promotion">
-                    <img src="https://ae01.alicdn.com/kf/Sb1daeff60b724ab78a3efdace4742810I.gif" alt="french-days-promo" srcset="">
+                <div class="col-lg-3">
+                    <img src="assets/Images/men.jpg" alt="Snow" style="width: 100%; height: 100%;">
+                    <div class="centered">Men's</div>
                 </div>
+            </div>
 
 
-
-                <div class="women-card row mt-5 ">
-                    <div class="card-group text-center col-lg-8 offset-lg-1">
-                        <div class="card mr-5 mt-5 border-0">
-                            <img class="card-img-top" src="assets/Images/man-1.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title font-weight-bold">Pure Pineapple</h5>
-                                <p class="card-text">$32.00</p>
-                            </div>
-                        </div>
-                        <div class="card mr-5 mt-5 border-0">
-                            <img class="card-img-top" src="assets/Images/man-2.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title font-weight-bold">Guangzhou sweater</h5>
-                                <p class="card-text">$14.00<span>$34.00</span></p>
-                            </div>
-                        </div>
-                        <div class="card mt-5 mr-5 border-0">
-                            <img class="card-img-top" src="assets/Images/man-1.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title font-weight-bold">zhou sweater</h5>
-                                <p class="card-text ">$34.00 </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <img src="assets/Images/men.jpg" alt="Snow" style="width: 100%; height: 100%;">
-                        <div class="centered">Men's</div>
-                    </div>
-                </div>
-                
-
-
+            <div class="promotion">
+                <img src="assets/Images/french-days.jpg" alt="french-days-promo" srcset="">
+            </div>
 
 
 
@@ -198,6 +242,7 @@
     <script src="assets/js/index.js"></script>
     <script src="assets/js/slider.js"></script>
     <script src="assets/js/header.js"></script>
+    <script src="assets/js/chrono.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
 
