--- a/Contact.html
+++ b/Contact.html
@@ -109,13 +109,13 @@
     </div>
     <!-- Carte localisation AFPA -->
     <div class="justify-content-center">
-        <img src="assets/Images/map.png" alt="location afpa" class="center">
+        <img src="assets/Images/maps.png" alt="location afpa" class="center">
     </div>
     <footer>
         <section>  
             
             <div class="partenaires">
-                <img  src="assets/Images/gucci-logo.png" alt="">
+                <img  src="assets/Images/gucci-logo.webp" alt="">
                 <img class="afpa-logo" src="assets/Images/afpa-logo.png" alt="">
                 <img src="assets/Images/h-m-logo-0.png" alt="">
             </div>
