--- a/index.html
+++ b/index.html
@@ -48,16 +48,6 @@
                 <div id="slidingImage"> <img src="assets/Images/img4.png" alt="image4"> </div>
             </div>
         </section>
-<<<<<<< HEAD
-=======
-
-
-
-
-        <div class="promotion">
-            <img src="assets/Images/french-days.jpg" alt="french-days-promo" srcset="">
-        </div>
->>>>>>> 78488dcd5aa1abc6e45553344cca929999ebd061
 
 
         <section class="affiche">
@@ -172,49 +162,13 @@
                 </div>
             </div>
 
-
-<<<<<<< HEAD
+<!-- this is new  -->
             <div class="promotion">
                 <img src="assets/Images/french-days.jpg" alt="french-days-promo" srcset="">
             </div>
-=======
-
-                <div class="women-card row mt-5 ">
-                    <div class="card-group text-center col-lg-8 offset-lg-1">
-                        <div class="card mr-5 mt-5 border-0">
-                            <img class="card-img-top" src="assets/Images/man-1.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title font-weight-bold"> Pure Pineapple </h5>
-                                <p class="card-text">$32.00</p>
-                            </div>
-                        </div>
-                        <div class="card mr-5 mt-5 border-0">
-                            <img class="card-img-top" src="assets/Images/man-2.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title font-weight-bold"> Guangzhou sweater </h5>
-                                <p class="card-text"> $14.00 <span>$34.00</span></p>
-                            </div>
-                        </div>
-                        <div class="card mt-5 mr-5 border-0">
-                            <img class="card-img-top" src="assets/Images/man-1.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title font-weight-bold"> zhou sweater </h5>
-                                <p class="card-text "> $34.00 </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <img src="assets/Images/men.jpg" alt="Snow" style="width: 100%; height: 100%;">
-                        <div class="centered">Men's</div>
-                    </div>
-                </div>
-                
 
 
->>>>>>> 78488dcd5aa1abc6e45553344cca929999ebd061
-
-
-
+<!-- this is new  -->
 
 
 
@@ -223,7 +177,7 @@
         <section>
 
             <div class="partenaires">
-                <img src="assets/Images/gucci-logo.png" alt="">
+                <img src="assets/Images/gucci-logo.webp" alt="">
                 <img class="afpa-logo" src="assets/Images/afpa-logo.png" alt="">
                 <img src="assets/Images/h-m-logo-0.png" alt="">
             </div>
@@ -287,7 +241,6 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="assets/js/index.js"></script>
     <script src="assets/js/slider.js"></script>
-    <script src="assets/js/header.js"></script>
     <script src="assets/js/chrono.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
